--- a/src/app/styles/themes/normal.scss
+++ b/src/app/styles/themes/normal.scss
@@ -1,5 +1,6 @@
 .app.light {
   --bg-color: #e8e8ea;
-  --primary-color: #0232c2;
-  --secondary-color: #0449e0
+  --inverted-bg-color: #090949;
+  --inverted-primary-color: #049604;
+  --inverted-secondary-color: #04ff04
 }
